[package]
name = "yummy-subway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
flexi_logger = "0.31"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
getset = "0.1"
derive-new = "0.6"
once_cell = "1.21"
sea-orm = { version = "1.1.13", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
mysql_async = "0.36.1"
async-trait = "0.1.88"
dotenv = "0.15.0"
calamine = "0.28"